name:          pairtree
version:       0.1.0
description:   A library that supports the mapping between identifiers
               and filepaths described in the Pairtree Specification.
copyright:     (c) 2013 Travis Brown
license-file:  LICENSE.txt
author:        Travis Brown
maintainer:    travisrobertbrown@gmail.com
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  exposed-modules:
    Data.Pairtree,
    Data.Pairtree.Mapping
  build-depends:
    base >= 2,
    bytestring >= 0.10.0.2,
    containers >= 0.5.0.0,
    directory >= 1.2.0.1,
    filepath >= 1.3.0.1,
    text >= 0.11.2.3,
    text-format >= 0.3.1.0

